--- a/_config.yml
+++ b/_config.yml
@@ -42,4 +42,16 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-comments: true
+comments :
+  provider : disqus    # 啟動的留言板服務，這邊就用預設即可
+  disqus :
+    short_name : vince115    # 將內容替換成剛剛在disqus上申請的site name
+  livefyre :
+    site_id : 123
+  intensedebate :
+    account : 123abc
+  facebook :
+    appid : 123
+    num_posts: 5
+    width: 580
+    colorscheme: light
