--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,13 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
+netlify:
+  headers:
+        - "X-Frame-Options: ALLOW-FROM http://disqus.com"
+        - "X-XSS-Protection: 1; mode=block"
+
+
+
 comments :
   provider : disqus    # 啟動的留言板服務，這邊就用預設即可
   disqus :
